# value-lang

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  REPS.md  clippy.toml  deny.toml  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
benches/: bench.rs
dev/: ROADMAP.md
docs/: API.md
docs/release/: v0.2.0.md  v1.0.0.md
src/: lib.rs  serde_impl.rs  value.rs
tests/: roundtrip.rs
