# =============================================================================
#  R E P S   ·   value-lang
# =============================================================================
[package]
name    = "value-lang"
version = "1.0.0"

# Minimum Supported Rust Version (MSRV)
rust-version = "1.85"
edition = "2024"

# License
license = "Apache-2.0 OR MIT"

# Readme
readme = "README.md"

# Description
description = "Runtime value representation (tagged unions / NaN-boxing)."

# Keywords (5 max)
keywords = ["language", "runtime", "value", "interpreter", "nan-boxing"]

# Categories
categories = ["development-tools", "data-structures"]

# Links
homepage      = "https://github.com/jamesgober/value-lang"
repository    = "https://github.com/jamesgober/value-lang"
documentation = "https://docs.rs/value-lang"

# Authors
authors = ["James Gober <me@jamesgober.com>"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "value_lang"
path = "src/lib.rs"


# FEATURE FLAGS
# #################################
[features]
default = ["std"]
# Propagate `std` down to intern-lang; without it the crate is `no_std` (core only).
std = ["intern-lang/std"]
# Serialization support for `Value` via serde.
serde = ["dep:serde"]


# DEPENDENCIES
# #################################
[dependencies]
# Symbol handles pack a 32-bit interned string id into the value tag. `NonZeroU32`
# ids round-trip losslessly through the NaN-box payload. Pinned to the published 1.x.
intern-lang = { version = "1", default-features = false }
serde = { version = "1", optional = true, default-features = false, features = ["derive", "alloc"] }


# DEV DEPENDENCIES
# #################################
[dev-dependencies]
criterion  = { version = "0.5", features = ["html_reports"] }
proptest   = "1"
# Exercises the `serde` feature end-to-end in the round-trip tests.
serde_json = "1"

[target.'cfg(loom)'.dev-dependencies]
loom = "0.7"


# BENCHMARKS
# #################################
[[bench]]
name    = "bench"
harness = false


# RELEASE PROFILE
# #################################
[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = "symbols"
